<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/ll_dialog"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog_bg"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/meassage_hint"
            android:textColor="@color/activity_bg"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:background="#00000000"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/transparent"
                android:layout_marginRight="12dp"
                android:text="提示消息"
                android:textColor="@color/activity_bg_hui"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dialog_edit"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginRight="12dp"/>
        </RelativeLayout>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1px"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginLeft="1dp"-->
            <!--android:layout_marginRight="1dp"-->
            <!--android:background="@color/darkgrey" />-->

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#242424"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textColor="@color/activity_bg_hui"
                android:textSize="16sp" />

            <View
                android:id="@+id/line"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:background="@color/darkgrey" />

            <Button
                android:id="@+id/dialog_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#242424"
                android:gravity="center"
                android:lines="1"
                android:text="@string/queding"
                android:textColor="@color/home_but_text"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>