<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#242424"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context="com.motorbike.anqi.MainActivityTwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/saoyisao_layout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@mipmap/sys" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/add_layout"
            android:layout_width="150dp"
            android:layout_height="36dp"
            android:background="@drawable/home_add_but_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="添加"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/xia_imgview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@mipmap/xia" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout

            android:id="@+id/msgs_layout"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@mipmap/xiaoxi" />
            <ImageView
                android:id="@+id/ivMessage"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:background="@mipmap/news"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:background="@mipmap/fenlei"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="历史房间列表"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
        <LinearLayout
            android:background="@null"
            android:id="@+id/gengduo_layout"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/iv_labya"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:background="@mipmap/lanye_an"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/xrecyclerView_layout"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_weight="1">

        <com.motorbike.anqi.xrecyclerview.XRecyclerView
            android:id="@+id/home_xrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:background="@null"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:background="@mipmap/fenlei"
            android:layout_height="wrap_content" />
        <TextView
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="竞速语音室"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:background="@mipmap/sy_bg"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/jinsu_img"
        android:background="@mipmap/sy_yy"
        android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/indicator_two"
        android:layout_width="match_parent"
        android:background="#1A1A1A"
        android:layout_height="@dimen/action_bar_hegit"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:background="@null"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/home_layout"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/tab_home_img"
                android:layout_width="wrap_content"
                android:background="@mipmap/sy_in"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tab_home_text"
                android:text="@string/home"
                android:background="@null"
                android:layout_width="wrap_content"
                android:textColor="@color/home_but_text"
                android:textSize="@dimen/home_but_text"
                android:layout_marginTop="@dimen/but_text_panding"
                android:layout_height="wrap_content" />
        </LinearLayout>

       <LinearLayout
                android:background="@null"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/message_layout"
                android:orientation="vertical"
                android:gravity="center">

           <LinearLayout
               android:layout_width="wrap_content"
               android:orientation="horizontal"
               android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/tab_message_img"
                    android:layout_width="wrap_content"
                    android:background="@mipmap/cyq_out"
                    android:layout_height="wrap_content" />

               <ImageView
                   android:id="@+id/che_you_quan"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@mipmap/news"
                   android:visibility="gone" />
           </LinearLayout>
                <TextView
                    android:background="@null"
                    android:id="@+id/tab_message_text"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/home_but_text"
                    android:text="@string/message"
                    android:layout_marginTop="@dimen/but_text_panding"
                    android:textColor="@color/home_but_text_an"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        <LinearLayout
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/journey_layout"
            >
            <ImageView
                android:id="@+id/tab_journey_img"
                android:layout_width="wrap_content"
                android:background="@mipmap/xc_out"
                android:layout_height="wrap_content" />
            <TextView
                android:background="@null"
                android:id="@+id/tab_journey_text"
                android:layout_width="wrap_content"
                android:textSize="@dimen/home_but_text"
                android:text="@string/journey"
                android:layout_marginTop="@dimen/but_text_panding"
                android:textColor="@color/home_but_text_an"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:background="@null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/me_layout"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/tab_me_img"
                android:layout_width="wrap_content"
                android:background="@mipmap/wd_out"
                android:layout_height="wrap_content" />
            <TextView
                android:background="@null"
                android:id="@+id/tab_me_text"
                android:layout_width="wrap_content"
                android:textSize="@dimen/home_but_text"
                android:text="@string/me"
                android:layout_marginTop="@dimen/but_text_panding"
                android:textColor="@color/home_but_text_an"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
